# llm-preprocessor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  history.db  test_input.txt  vcpkg.json  vcpkg.json.bak
.github/: copilot-instructions.md
benchmarks/: benchmark_runner.cpp  run_benchmarks.ps1  visualize.py
cmake/: LLMPreprocessorConfig.cmake.in
include/: config_loader.hpp  context_gatherer.hpp  embedding_engine.hpp  i_embedding_engine.hpp  intent_router.hpp  memory_engine.hpp  prompt_compiler.hpp  text_sanitizer.hpp  tokenizer.hpp
src/: config_loader.cpp  context_gatherer.cpp  embedding_engine.cpp  intent_router.cpp  main.cpp  memory_engine.cpp  prompt_compiler.cpp  text_sanitizer.cpp  tokenizer.cpp
tests/: test_config_loader.cpp  test_context_gatherer.cpp  test_embedding_engine.cpp  test_intent_router.cpp  test_memory_engine.cpp  test_prompt_compiler.cpp  test_text_sanitizer.cpp  test_tokenizer.cpp
